@@ -2,10 +2,59 @@ class ReplaceArithmeticOnRangesAst
     
   def map(ast)
     return ast unless ast.is_a?(Array)
-    arithmetic(ast) if ast.first == :arithmetic
     ast.each { |a| map(a) }
+    arithmetic(ast) if ast.first == :arithmetic
+    comparison(ast) if ast.first == :comparison
     ast
   end
+
+  # FIXME: DRY THIS UP
+  def comparison(ast)
+    left, operator, right = ast[1], ast[2], ast[3]
+    # Three different options, array on the left, array on the right, or both
+    # array on the left first
+    if left.first == :array && right.first != :array
+      map(right)
+      ast.replace(
+        array_map(left) do |cell|
+          [:comparison, map(cell), operator, right]
+        end
+      )
+
+    # array on the right next
+    elsif left.first != :array && right.first == :array
+      map(left)
+      ast.replace(
+        array_map(right) do |cell|
+          [:comparison, left, operator, map(cell)]
+        end
+      )
+    
+    # now array both sides
+    elsif left.first == :array && right.first == :array 
+      ast.replace(
+        left.map.with_index do |row, i|
+          if row == :array
+            row
+          else
+            row.map.with_index do |cell, j|
+              if cell == :row
+                cell
+              elsif i >= left.length || i >= right.length || j >= left[1].length || j >= right[1].length
+                [:error, "#VALUE!"]
+              else
+                [:comparison, map(left[i][j]), operator, map(right[i][j])]
+              end
+            end
+          end
+        end
+      )
+    else
+      map(left)
+      map(right)
+    end
+  end
+
   
   # Format [:artithmetic, left, operator, right] 
   # should have removed arithmetic with more than one operator
