@@ -1,6 +1,7 @@
 # Head
 
 - Fixed a bug in bounds checking when replacing arithmetic on ranges
+- Replace comparisons on arrays with arrays of comparisons
 - Ruby version of RIGHT now returns a string if index out of bounds
 - Removed the special case optimisation of the COUNT function. It wasn't right in some cases
 - Now copes with passing a range where a cell expected in the CHOOSE function, but only if CHOOSE is the first function in a cell
